--- a/src/style.css
+++ b/src/style.css
@@ -331,7 +331,7 @@ fill: #ffd055;
 
 .description{
     color: #ffffff;
-    font-family: 'Lato', Arial, sans-serif;
+    font-family: 'Lato-Light', Arial, sans-serif;
 
 }
 
